# GptTrainer

./: CMakeLists.txt  main.cpp
GptTrainerApiCommunicator/: ApiCommunicator.cpp  ApiCommunicator.h  CMakeLists.txt
GptTrainerFileReader/: CMakeLists.txt  GptFileReader.cpp  GptFileReader.h
GptTrainerSettingsManager/: CMakeLists.txt  SettingsManager.cpp  SettingsManager.h
GptTrainerSettingsManager/Settings/: Settings.cpp  Settings.h  SettingsName.h
